trunk/Archive2/a2/5e0f7b700a31ca/output
main.cpp:5:17: error: expected class name
class C : /*A*/ {
                ^
1 error generated.
